# AoC

./: .gitignore  10a.py  11a.py  12a.py  13b.py  14a.py  16a.py  17a.py  3a.py  5b.py  8a.py  9a.py  example1a.txt  examples12a.txt  examples6b.txt  markov.py  utils.py
2015/: 1.jl  1.py  10.jl  10.py  11.py  12.jl  12.py  13.jl  13.py  13a.py  14.jl  14.py  15.jl  15.py  15a.py  15b.py  16.jl  16.py  17.jl  17.py  18.jl  18.py  18a.py  18b.py  19.jl  19.py  19a.py  19b.py  2.jl  2.py  20.jl  20.py  20a.py  20b.py  21.jl  21.py  21a.py  21b.py  22.py  22a.py  (+39 more)
2016/: 1.jl  1.py  10.jl  10.py  11.py  11_2.py  12.jl  12.py  13.jl  13.py  14.jl  14a.py  14b.py  15.jl  15.py  16.jl  16.py  17.jl  17.py  18.jl  18.py  19a.py  2.jl  20.jl  20.py  21.jl  21a.py  21b.py  22.jl  22a.py  22b.py  23.py  24.py  25.py  2a.py  2b.py  3.jl  3a.py  3b.py  4.jl  (+14 more)
2017/: 1.jl  10a.py  10b.py  11.jl  11.py  12.py  13b.py  14.py  15.jl  15.py  15b.py  16.py  17.py  18a.py  19.py  1a.py  1b.py  20a.py  23b.py  2a.py  3a.py  4.jl  5.jl  6.py  7.jl  7.py  8.jl  8.py  9.py  test.py  utils.py
2018/: 1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  18_2.py  18_3.py  19.py  2.py  20.py  21.py  (+19 more)
2018/aoc_2018/: Cargo.toml
2018/aoc_2018/intcode/: Cargo.toml
2018/aoc_2018/intcode/src/: intcode.rs  lib.rs
2018/aoc_2018/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  intcode.rs.old  main.rs
(+555 files in other folders)
